--- a/app4.ipynb
+++ b/app4.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
+       "      <th>date</th>\n",
        "      <th>Price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -309,74 +309,17 @@
        "      <td>2016-01-04</td>\n",
        "      <td>89.512520</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2016-01-05</td>\n",
-       "      <td>92.802711</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2016-01-06</td>\n",
-       "      <td>90.669212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2016-01-07</td>\n",
-       "      <td>87.940239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1990</th>\n",
-       "      <td>2024-01-23</td>\n",
-       "      <td>790.400024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1991</th>\n",
-       "      <td>2024-01-24</td>\n",
-       "      <td>812.200012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1992</th>\n",
-       "      <td>2024-01-25</td>\n",
-       "      <td>815.700012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1993</th>\n",
-       "      <td>2024-01-29</td>\n",
-       "      <td>811.700012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1994</th>\n",
-       "      <td>2024-01-30</td>\n",
-       "      <td>812.000000</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1995 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date       Price\n",
-       "0    2016-01-01   87.995926\n",
-       "1    2016-01-04   89.512520\n",
-       "2    2016-01-05   92.802711\n",
-       "3    2016-01-06   90.669212\n",
-       "4    2016-01-07   87.940239\n",
-       "...         ...         ...\n",
-       "1990 2024-01-23  790.400024\n",
-       "1991 2024-01-24  812.200012\n",
-       "1992 2024-01-25  815.700012\n",
-       "1993 2024-01-29  811.700012\n",
-       "1994 2024-01-30  812.000000\n",
-       "\n",
-       "[1995 rows x 2 columns]"
+       "         date      Price\n",
+       "0  2016-01-01  87.995926\n",
+       "1  2016-01-04  89.512520"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,13 +339,28 @@
     "\n",
     "df1 = df1.reset_index()\n",
     "df1 = df1[['Date', 'Adj Close']]\n",
-    "df1.columns = ['Date', 'Price']\n",
-    "df1"
+    "df1.columns = ['date', 'Price']\n",
+    "df1['date']  = df1['date'].apply(lambda x: x.strftime('%Y-%m-%d'))\n",
+    "df1.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -428,6 +386,7 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>recom</th>\n",
+       "      <th>Price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -435,86 +394,97 @@
        "      <th>0</th>\n",
        "      <td>2016-01-01</td>\n",
        "      <td>24</td>\n",
+       "      <td>87.995926</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2016-01-04</td>\n",
        "      <td>21</td>\n",
+       "      <td>89.512520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2016-01-05</td>\n",
        "      <td>14</td>\n",
+       "      <td>92.802711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2016-01-06</td>\n",
        "      <td>30</td>\n",
+       "      <td>90.669212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2016-01-07</td>\n",
        "      <td>46</td>\n",
+       "      <td>87.940239</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2103</th>\n",
+       "      <th>1988</th>\n",
+       "      <td>2024-01-23</td>\n",
+       "      <td>53</td>\n",
+       "      <td>790.400024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1989</th>\n",
        "      <td>2024-01-24</td>\n",
        "      <td>47</td>\n",
+       "      <td>812.200012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2104</th>\n",
+       "      <th>1990</th>\n",
        "      <td>2024-01-25</td>\n",
        "      <td>16</td>\n",
+       "      <td>815.700012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2105</th>\n",
-       "      <td>2024-01-26</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2106</th>\n",
+       "      <th>1991</th>\n",
        "      <td>2024-01-29</td>\n",
        "      <td>50</td>\n",
+       "      <td>811.700012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2107</th>\n",
+       "      <th>1992</th>\n",
        "      <td>2024-01-30</td>\n",
        "      <td>42</td>\n",
+       "      <td>812.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2108 rows × 2 columns</p>\n",
+       "<p>1993 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            date  recom\n",
-       "0     2016-01-01     24\n",
-       "1     2016-01-04     21\n",
-       "2     2016-01-05     14\n",
-       "3     2016-01-06     30\n",
-       "4     2016-01-07     46\n",
-       "...          ...    ...\n",
-       "2103  2024-01-24     47\n",
-       "2104  2024-01-25     16\n",
-       "2105  2024-01-26     43\n",
-       "2106  2024-01-29     50\n",
-       "2107  2024-01-30     42\n",
+       "            date  recom       Price\n",
+       "0     2016-01-01     24   87.995926\n",
+       "1     2016-01-04     21   89.512520\n",
+       "2     2016-01-05     14   92.802711\n",
+       "3     2016-01-06     30   90.669212\n",
+       "4     2016-01-07     46   87.940239\n",
+       "...          ...    ...         ...\n",
+       "1988  2024-01-23     53  790.400024\n",
+       "1989  2024-01-24     47  812.200012\n",
+       "1990  2024-01-25     16  815.700012\n",
+       "1991  2024-01-29     50  811.700012\n",
+       "1992  2024-01-30     42  812.000000\n",
        "\n",
-       "[2108 rows x 2 columns]"
+       "[1993 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "pd.merge(df, df1)"
    ]
   },
   {
