added write func

--- a/app4.ipynb
+++ b/app4.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "1 Failed download:\n",
-      "['TECILCHEM.NS']: Exception(\"%ticker%: Data doesn't exist for startDate = 1448562600, endDate = 1451586600\")\n",
-      "\n",
-      "1 Failed download:\n",
-      "['NAN.NS']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# back calculation\n",
     "#####################\n",
@@ -120,15 +107,43 @@
     "\n",
     "\n",
     "\n",
+    "def write_df(stock_id, df):\n",
+    "\n",
+    "    df1 = yf.download(\n",
+    "                    tickers = 'JSWSTEEL.NS',\n",
+    "                    start='2016-01-01',\n",
+    "                    #end=date.today().replace(day=2),\n",
+    "                    end = '2024-01-31',\n",
+    "                    interval = \"1d\",\n",
+    "                    threads=True,\n",
+    "                    group_by = 'ticker', \n",
+    "                    progress=False\n",
+    "                )\n",
+    "\n",
+    "\n",
+    "    df1 = df1.reset_index()\n",
+    "    df1 = df1[['Date', 'Adj Close']]\n",
+    "    df1.columns = ['date', 'Price']\n",
+    "    df1['date']  = df1['date'].apply(lambda x: x.strftime('%Y-%m-%d'))\n",
+    "    dfc = pd.merge(df, df1)\n",
+    "\n",
+    "    dfc.to_csv('stocks_recom\\\\' + str(stock_id.split('.')[0]) +'.csv', index= False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
     "nse_df = pd.read_excel('nse_data.xlsx')\n",
-    "nse_df = nse_df.tail(2)\n",
+    "nse_df = nse_df.head(2)\n",
     "nse_df['Symbol'] = [str(s) + '.NS' for s in nse_df['Symbol']]\n",
+    "\n",
     "\n",
     "\n",
     "for stock_id in list(set(nse_df['Symbol'])):\n",
     "    try:\n",
     "        df = pd.DataFrame(get_recoms(stock_id), columns=['date', 'recom'])\n",
-    "        df.to_csv('stocks\\\\' + str(stock_id.split('.')[0]) +'.csv', index= False)\n",
+    "        write_df(stock_id, df)\n",
     "    except:\n",
     "        continue"
    ]
@@ -340,8 +355,7 @@
     "df1 = df1.reset_index()\n",
     "df1 = df1[['Date', 'Adj Close']]\n",
     "df1.columns = ['date', 'Price']\n",
-    "df1['date']  = df1['date'].apply(lambda x: x.strftime('%Y-%m-%d'))\n",
-    "df1.head(2)"
+    "df1['date']  = df1['date'].apply(lambda x: x.strftime('%Y-%m-%d'))\n"
    ]
   },
   {
