--- a/app4.ipynb
+++ b/app4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
     "    df1['date']  = df1['date'].apply(lambda x: x.strftime('%Y-%m-%d'))\n",
     "    dfc = pd.merge(df, df1)\n",
     "\n",
-    "    dfc.to_csv('stocks_recom\\\\' + str(stock_id.split('.')[0]) +'.csv', index= False)\n",
+    "    dfc.to_csv('stock_recom\\\\' + str(stock_id.split('.')[0]) +'.csv', index= False)\n",
     "\n",
     "\n",
     "\n",
@@ -135,7 +135,7 @@
     "\n",
     "\n",
     "nse_df = pd.read_excel('nse_data.xlsx')\n",
-    "nse_df = nse_df.head(2)\n",
+    "nse_df = nse_df.head(100)\n",
     "nse_df['Symbol'] = [str(s) + '.NS' for s in nse_df['Symbol']]\n",
     "\n",
     "\n",
